# self_rust_os

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  entry_point.rs  gdt.rs  interrupts.rs  lib.rs  memory.rs  serial.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/userspace/: mod.rs  process.rs  syscall.rs
src/vga_buffer/: buffer.rs  colors.rs  constants.rs  macros.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  userspace.rs
user_programs/hello/: Cargo.toml  build.sh  hello_meta.rs  linker.ld  x86_64-user-program.json
user_programs/hello/.cargo/: config.toml
user_programs/hello/src/: main.rs
